refactor(sandside): #112 massive plugin refactor
Remove FeedParserPlugin and all implementation
replace it by NewsFilters

fix #112