@@ -4,26 +4,20 @@ import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
 import fr.ght1pc9kc.baywatch.common.domain.Hasher;
+import fr.ght1pc9kc.baywatch.scrapper.api.NewsFilter;
 import fr.ght1pc9kc.baywatch.scrapper.api.RssAtomParser;
 import fr.ght1pc9kc.baywatch.scrapper.infra.config.ScrapperProperties;
 import fr.ght1pc9kc.baywatch.security.api.AuthenticationFacade;
 import fr.ght1pc9kc.baywatch.techwatch.api.model.Feed;
-import fr.ght1pc9kc.baywatch.techwatch.api.model.News;
 import fr.ght1pc9kc.baywatch.techwatch.api.model.RawFeed;
 import fr.ght1pc9kc.baywatch.techwatch.api.model.RawNews;
-import fr.ght1pc9kc.baywatch.techwatch.api.model.State;
 import fr.ght1pc9kc.baywatch.techwatch.domain.ports.FeedPersistencePort;
 import fr.ght1pc9kc.baywatch.techwatch.domain.ports.NewsPersistencePort;
-import fr.ght1pc9kc.scraphead.core.HeadScraper;
-import fr.ght1pc9kc.scraphead.core.model.Metas;
-import fr.ght1pc9kc.scraphead.core.model.opengraph.OpenGraph;
-import org.assertj.core.api.Assertions;
 import org.awaitility.Awaitility;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 import org.mockito.stubbing.Answer;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -61,13 +55,18 @@ class FeedScrapperServiceTest {
             true, Duration.ofDays(1), Duration.ofSeconds(2), Period.ofDays(30), Set.of("http", "https")
     );
 
-    private FeedScrapperService tested;
+    @SuppressWarnings({"Convert2Lambda", "Anonymous2MethodRef"})
+    private static final NewsFilter mockNewsFilter = spy(new NewsFilter() {
+        @Override
+        public Mono<RawNews> filter(RawNews news) {
+            return Mono.just(news);
+        }
+    });
 
-    private HeadScraper headScraperMock;
+    private FeedScrapperService tested;
     private NewsPersistencePort newsPersistenceMock;
     private RssAtomParser rssAtomParserMock;
     private FeedPersistencePort feedPersistenceMock;
-
 
     @BeforeAll
     static void stubAllMockServerRoute() {
@@ -109,6 +108,7 @@ class FeedScrapperServiceTest {
         verify(newsPersistenceMock,
                 times(1).description("Expect only one call because of the buffer to 100")
         ).persist(anyCollection());
+        verify(mockNewsFilter, times(2)).filter(any());
     }
 
     @Test
@@ -162,72 +162,6 @@ class FeedScrapperServiceTest {
         verify(rssAtomParserMock, times(2)).readEntryEvents(any(), any(Feed.class));
     }
 
-    @Test
-    void should_scrap_with_opengraph() {
-        when(headScraperMock.scrap(any(URI.class))).thenReturn(Mono.just(Metas.builder()
-                .og(OpenGraph.builder()
-                        .image(URI.create("http://www.ght1pc9kc.fr/featured.jpg"))
-                        .title("OpenGraph Title")
-                        .build())
-                .build()
-        ));
-        //noinspection unchecked
-        ArgumentCaptor<List<News>> captor = ArgumentCaptor.forClass(List.class);
-        when(newsPersistenceMock.persist(captor.capture())).thenReturn(Mono.just(1));
-
-        tested.startScrapping();
-        Awaitility.await("for scrapping begin").timeout(Duration.ofSeconds(5))
-                .pollDelay(Duration.ZERO)
-                .until(() -> tested.isScrapping());
-        tested.shutdownScrapping();
-
-        News actual = captor.getValue().stream()
-                .filter(n -> "a815eff60162e6f8dd18c2397ab15d0843a23a2be13bf521e517e38eb835ab28".equals(n.getId()))
-                .findAny().orElseThrow();
-        Assertions.assertThat(actual).isEqualTo(News.builder()
-                .raw(RawNews.builder()
-                        .id("a815eff60162e6f8dd18c2397ab15d0843a23a2be13bf521e517e38eb835ab28")
-                        .title("OpenGraph Title")
-                        .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
-                        .image(URI.create("http://www.ght1pc9kc.fr/featured.jpg"))
-                        .publication(Instant.parse("2022-04-29T12:35:41Z"))
-                        .build())
-                .state(State.NONE)
-                .build());
-    }
-
-    @Test
-    void should_ignore_opengraph_image_as_data() {
-        when(headScraperMock.scrapOpenGraph(any(URI.class))).thenReturn(Mono.just(
-                OpenGraph.builder()
-                        .image(URI.create("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABeAAAAQ4CA"))
-                        .build()
-        ));
-        //noinspection unchecked
-        ArgumentCaptor<List<News>> captor = ArgumentCaptor.forClass(List.class);
-        when(newsPersistenceMock.persist(captor.capture())).thenReturn(Mono.just(1));
-
-        tested.startScrapping();
-        Awaitility.await("for scrapping begin").timeout(Duration.ofSeconds(5))
-                .pollDelay(Duration.ZERO)
-                .until(() -> tested.isScrapping());
-        tested.shutdownScrapping();
-
-        News actual = captor.getValue().stream()
-                .filter(n -> "1d665bbff973032c28c72064f2073a85f8777b6ca3c3e0f9b9c2385cd2b206c0".equals(n.getId()))
-                .findAny().orElseThrow();
-        Assertions.assertThat(actual).isEqualTo(News.builder()
-                .raw(RawNews.builder()
-                        .id("1d665bbff973032c28c72064f2073a85f8777b6ca3c3e0f9b9c2385cd2b206c0")
-                        .title("Dummy Title 2")
-                        .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
-                        .image(URI.create("https://practicalprogramming.fr/image.jpg"))
-                        .publication(Instant.parse("2022-04-30T12:42:24Z"))
-                        .build())
-                .state(State.NONE)
-                .build());
-    }
-
     @BeforeEach
     void setUp() {
         newsPersistenceMock = mock(NewsPersistencePort.class);
@@ -246,31 +180,22 @@ class FeedScrapperServiceTest {
             }
 
             @Override
-            public Mono<News> readEntryEvents(List<XMLEvent> events, Feed feed) {
+            public Mono<RawNews> readEntryEvents(List<XMLEvent> events, Feed feed) {
                 if (feed.getName().equals("Reddit")) {
-                    return Mono.just(
-                            News.builder()
-                                    .raw(RawNews.builder()
-                                            .id(Hasher.sha3(feed.getName() + "01"))
-                                            .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
-                                            .title("Dummy Title")
-                                            .publication(Instant.parse("2022-04-29T12:35:41Z"))
-                                            .build())
-                                    .state(State.NONE)
-                                    .build());
+                    return Mono.just(RawNews.builder()
+                            .id(Hasher.sha3(feed.getName() + "01"))
+                            .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
+                            .title("Dummy Title")
+                            .publication(Instant.parse("2022-04-29T12:35:41Z"))
+                            .build());
                 } else {
-                    return Mono.just(
-                            News.builder()
-                                    .raw(RawNews.builder()
-                                            .id(Hasher.sha3(feed.getName() + "02"))
-                                            .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
-                                            .image(URI.create("https://practicalprogramming.fr/image.jpg"))
-                                            .title("Dummy Title 2")
-                                            .publication(Instant.parse("2022-04-30T12:42:24Z"))
-                                            .build())
-                                    .state(State.NONE)
-                                    .build()
-                    );
+                    return Mono.just(RawNews.builder()
+                            .id(Hasher.sha3(feed.getName() + "02"))
+                            .link(URI.create("https://practicalprogramming.fr/dbaas-la-base-de-donnees-dans-le-cloud/"))
+                            .image(URI.create("https://practicalprogramming.fr/image.jpg"))
+                            .title("Dummy Title 2")
+                            .publication(Instant.parse("2022-04-30T12:42:24Z"))
+                            .build());
                 }
             }
         });
@@ -279,9 +204,6 @@ class FeedScrapperServiceTest {
         URI jdhUri = URI.create("http://localhost:" + mockServer.port() + "/feeds/journal_du_hacker.xml");
         String springSha3 = Hasher.identify(springUri);
         String jdhSha3 = Hasher.identify(jdhUri);
-
-        headScraperMock = mock(HeadScraper.class);
-        when(headScraperMock.scrap(any(URI.class))).thenReturn(Mono.empty());
 
         feedPersistenceMock = mock(FeedPersistencePort.class);
         when(feedPersistenceMock.list()).thenAnswer((Answer<Flux<Feed>>) invocationOnMock -> Flux.just(
@@ -301,8 +223,8 @@ class FeedScrapperServiceTest {
         when(authFacadeMock.withSystemAuthentication()).thenReturn(Context.empty());
 
         tested = new FeedScrapperService(scraperProperties,
-                feedPersistenceMock, newsPersistenceMock, authFacadeMock, rssAtomParserMock, headScraperMock,
-                Collections.emptyList(), Map.of());
+                feedPersistenceMock, newsPersistenceMock, authFacadeMock, rssAtomParserMock,
+                Collections.emptyList(), Map.of(), List.of(mockNewsFilter));
         tested.setClock(Clock.fixed(Instant.parse("2022-04-30T12:35:41Z"), ZoneOffset.UTC));
     }
 }
